# 2048

./: Makefile  Makefile-  Makefile.am  Makefile.in  aclocal.m4  config.h  configure  configure.ac  configure.ac~  grid.cc  grid.h  main.cc
.deps/: main.Po
src/: Makefile.am  Makefile.am~  Makefile.in  config.h.in  config.h.in~  grid.cc  grid.h  grid.h~  main.cc  test_grid.cc
test/: Makefile.am  Makefile.in  blank.sh  sanity  test_grid.sh
